Modernize Java syntax (Phase 1): lambdas, diamond operator, streams, try-with-resources (#4)
* Add Phase 0 test foundation: JUnit 5, test infrastructure, and core business logic tests

Upgrade from JUnit 4 to JUnit 5 (Jupiter 5.11.3), add Mockito 5.14.2 and
AssertJ 3.26.3 as test dependencies, and add maven-surefire-plugin 3.5.2.

Fix existing test issues:
- BgMaxFileTest: close BufferedReader with try-with-resources, reorder
  assertEquals args to JUnit 5 style
- SSAutoIncrementTest: fix reversed assertion args, remove JUnit 3 imports
- All 4 existing tests: migrate to JUnit 5 annotations/assertions

Add 174 new tests across 9 test files covering SSDB-free code paths:
- SSUtilTest: isNullOrEmpty, verifyArgument, verifyNotNull, convertNullToEmpty,
  isInRage, readResourceToString
- SSAddressTest: constructors, copy, getters/setters, equals, clone, toString,
  dispose, getPostalAddress
- SSAccountTest: constructors, getNumber null behavior, copy, equals/hashCode,
  toString/toRenderString
- SSDateMathTest: floor, ceil, first/last day in month, getDaysBetween,
  getMonthsBetween, addMonths
- SSMonthTest: constructors, isBetween, isDateInMonth, equals/hashCode,
  getName, splitYearIntoMonths
- SSOCRNumberTest: extend with getCheckSum Luhn algorithm tests
- SSVoucherRowTest: constructors, setValue/getValue, isEmpty, hasAccount,
  isDebet, copy/reverse, setCrossed/setAdded
- SSVoucherMathTest: row-level debet/credit math operations
- SSAccountMathTest: inPeriod, getAccounts, first/last account, VAT/SRU
  code filtering and summing

Add .editorconfig with 4-space indentation, UTF-8, LF, 120-char line width.

Build result: 188 tests, 0 failures, 0 errors, 1 skipped.

* Modernize Java syntax (Phase 1): lambdas, diamond operator, streams, try-with-resources

Apply Phase 1 low-risk syntax modernization across 425 files (641 production
source files compiled, 188 tests pass):

- Replace deprecated boxing constructors with valueOf() (3 occurrences)
- Fix raw types: add generics,